--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
 
     <div class="promocao-card">
-      <h3>Desconto para Primeira Compra</h3>
+      <h3>Cupom Primeira Compra</h3>
       <p>Use o cupom <strong>BOASVINDAS10</strong> e ganhe 10% de desconto!</p>
       <input type="text" id="input-cupom" placeholder="Digite seu cupom aqui" />
       <button id="btn-aplicar-cupom">Aplicar Cupom</button>
@@ -153,7 +153,7 @@
 
    <!-- depoimentos -->
   <section class="depoimentos" id="depoimentos">
-  <h2>O que nossos clientes dizem</h2>
+  <h2>O que Nossos Clientes Dizem</h2>
 
   <div class="depoimentos-container">
     <div class="depoimento-card">
@@ -287,21 +287,30 @@
       <h2>Pizzaria do Bairro</h2>
     </div>
 
-    <nav class="footer-nav" aria-label="Footer Navigation">
-      <ul>
-        <li><a href="#cardapio">Cardápio</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
+    
 
     <div class="footer-contato" id="contato">
       <p><i class="fas fa-phone"></i> (21) 99999-9999</p>
       <p><i class="fas fa-map-marker-alt"></i> Rua das Pizzas, 123 - Bairro</p>
       <p><i class="fas fa-envelope"></i> contato@pizzariadobairro.com</p>
     </div>
+    </div>
 
-    <div class="footer-redes" aria-label="Redes Sociais">
+    <div class="container__footer">
+
+      <div class="footer-nav" aria-label="Footer Navigation">
+      <ul>
+        <li><a href="#cardapio">Cardápio</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </div>
+
+      <div class="footer-copy">
+        <p>© 2025 Pizzaria do Bairro. Todos os direitos reservados.</p>
+      </div>
+
+      <div class="footer-redes" aria-label="Redes Sociais">
       <a href="#" target="_blank" rel="noopener" aria-label="Instagram">
         <i class="fab fa-instagram"></i> Instagram
       </a>
@@ -309,11 +318,8 @@
         <i class="fab fa-facebook-f"></i> Facebook
       </a>
     </div>
-  </div>
-
-  <div class="footer-copy">
-    <p>© 2025 Pizzaria do Bairro. Todos os direitos reservados.</p>
-  </div>
+    </div>
+  
 </footer>
 
 
